[build-system]
requires = ["setuptools", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "vissim2gmns"
version = "1.5.4a2"
description = "vissim2gmns converts VISSIM files (.inpx, .fzp, .fhz) into GMNS format with WGS 1984 coordinates for easy GIS visualization and analysis."
authors = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
maintainers = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

readme = {file = 'README.md', content-type='text/markdown'}
license-files = ['LICENSE']

requires-python = ">=3.10"
keywords = ["VISSIM", "GMNS", "Visualization", "Conversion", "Traffic Simulation", "Analysis"]

dynamic = ["dependencies"]

[project.optional-dependencies]
base = ["pandas", "pyufunc","geopandas", "Shapely"] # for the core functionality

[project.urls]
Homepage = 'https://github.com/xyluo25/vissim2gmns'
Documentation = 'https://vissim2gmns.readthedocs.io/en/latest/'
"Bug Tracker" = 'https://github.com/xyluo25/vissim2gmns/issues'
Download = "https://www.pepy.tech/projects/vissim2gmns"

#         # 'Publication': '',
#         # 'Citation': '',
#         # 'Acknowledgement': '',
#         # 'FAQs': '',

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {file = ["requirements_dev.txt"]}

[tool.setuptools]
py-modules = []
package-data = {'vissim2gmns' = ['*.txt', '*.xls', '*.xlsx', '*.csv'], "test_data" = ['*.xls']}

# [tool.setuptools.packages.find]
# where = ["vissim2gmns"]

# [tool.setuptools.package-data]
# vissim2gmns = ['*.txt', '*.xls', '*.xlsx', '*.csv']
